Message wrap fix

--- a/src/validation-wrapper.css
+++ b/src/validation-wrapper.css
@@ -13,6 +13,7 @@
 	vertical-align: bottom;
 	display: inline-block;
 	text-align: left;
+	text-align-last: left;
 	float: none;
 }
 
